...
        app:layout_constraintBottom_toBottomOf="@id/bottom_round_shape_view"
        app:layout_constraintTop_toTopOf="@id/bottom_round_shape_view"
        app:layout_constraintRight_toRightOf="@id/bottom_round_shape_view"
        app:layout_constraintLeft_toLeftOf="@id/bottom_round_shape_view"/>

    <Button
            android:id="@+id/get_places_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_places"
            android:minWidth="@dimen/minWidth"
            android:minHeight="@dimen/minHeight"
            android:layout_margin="@dimen/margin_40"
...
            app:layout_constraintTop_toBottomOf="@+id/not_connected_img"
            app:layout_constraintBottom_toBottomOf="@id/bottom_round_shape_view"
            app:layout_constraintLeft_toLeftOf="@id/bottom_round_shape_view"
            app:layout_constraintRight_toRightOf="@id/bottom_round_shape_view"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/places_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            tools:listitem="@layout/recycler_item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
...
